--- a/myApp/src/app/partofpage/addstore/addstore.page.html
+++ b/myApp/src/app/partofpage/addstore/addstore.page.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<ion-header>
+<ion-header class="background">
   <ion-toolbar>
     <ion-buttons>
       <ion-back-button defaultHref="home"></ion-back-button>
@@ -8,7 +8,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="background">
 
   <div class="ion-padding sizeimage centeredit" style="">
     <img src="assets/img/default-avatar.png" class="rounded" alt="...">
