--- a/myApp/src/app/partofpage/editprofile/editprofile.page.html
+++ b/myApp/src/app/partofpage/editprofile/editprofile.page.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
-<ion-header>
-  <ion-toolbar>
+<ion-header class="background">
+  <ion-toolbar class="background">
     <ion-buttons>
       <ion-back-button defaultHref="home"></ion-back-button>
     </ion-buttons>
@@ -9,7 +9,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngFor="let data of this.dataUser" >
+<ion-content *ngFor="let data of this.dataUser" class="background">
 
   <div class="ion-padding sizeimage centeredit" style="">
     <img src="assets/img/default-avatar.png" class="rounded" alt="...">
