--- a/myApp/src/app/partofpage/editfield/editfield.page.html
+++ b/myApp/src/app/partofpage/editfield/editfield.page.html
@@ -1,5 +1,5 @@
-<ion-header>
-  <ion-toolbar>
+<ion-header class="background">
+  <ion-toolbar class="background">
     <ion-buttons>
       <ion-back-button defaultHref="home"></ion-back-button>
     </ion-buttons>
@@ -7,6 +7,6 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="background">
 
 </ion-content>
