--- a/myApp/src/app/partofpage/editstore/editstore.page.html
+++ b/myApp/src/app/partofpage/editstore/editstore.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header class="background">
   <ion-toolbar>
     <ion-buttons>
       <ion-back-button defaultHref="home"></ion-back-button>
@@ -7,6 +7,6 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="background">
 
 </ion-content>
