--- a/myApp/src/app/partofpage/managestore/managestore.page.html
+++ b/myApp/src/app/partofpage/managestore/managestore.page.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
-<ion-header>
-  <ion-toolbar>
+<ion-header class="background">
+  <ion-toolbar class="background">
     <ion-buttons>
       <ion-back-button defaultHref="home"></ion-back-button>
     </ion-buttons>
@@ -9,7 +9,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="background">
   <p-table [value]="products">
     <ng-template pTemplate="caption">
       <div class="p-d-flex p-ai-center p-jc-between">
@@ -34,8 +34,9 @@
 
         <td>
             <ion-icon name="search-outline" style="width: 25px;height: 25px;" (click)="gotomanagefiled(product.id_store)"></ion-icon>
-            <ion-icon name="construct-outline" style="width: 25px;height: 25px;" (click)="gotoEdit()"></ion-icon>
+            <ion-icon name="construct-outline" class="p-button-rounded p-button-warning" style="width: 25px;height: 25px;" (click)="gotoEdit()"></ion-icon>
         </td>
+
 <!--        <td><p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating></td>-->
 <!--        <td><span [class]="'product-badge status-' + product.inventoryStatus.toLowerCase()">{{product.inventoryStatus}}</span></td>-->
       </tr>
