--- a/myApp/src/app/partofpage/addstore/addstore.page.html
+++ b/myApp/src/app/partofpage/addstore/addstore.page.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<ion-header class="background">
+<link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
+<ion-header class="background" style="font-family: 'Sriracha', cursive;">
   <ion-toolbar>
     <ion-buttons>
       <ion-back-button defaultHref="home"></ion-back-button>
@@ -8,7 +9,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="background">
+<ion-content class="background" style="font-family: 'Sriracha', cursive;">
 
   <div class="ion-padding sizeimage centeredit" style="">
     <img src="assets/img/default-avatar.png" class="rounded" alt="...">
