--- a/myApp/src/app/register/register.page.html
+++ b/myApp/src/app/register/register.page.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
 
-
-<ion-header class="ion-no-border">
+<ion-header class="ion-no-border" style="font-family: 'Sriracha', cursive;">
     <ion-toolbar>
         <ion-buttons>
             <ion-back-button defaultHref="login"></ion-back-button>
@@ -10,7 +10,7 @@
 </ion-header>
 
 <!--</ion-content>-->
-<ion-content>
+<ion-content style="font-family: 'Sriracha', cursive;">
 
     <div class="ion-padding sizeimage centeredit" style="">
       <img src="assets/img/jongsanam-logo.png" class="rounded" alt="...">
