--- a/myApp/src/app/tabs/myhome/myhome.page.html
+++ b/myApp/src/app/tabs/myhome/myhome.page.html
@@ -1,13 +1,13 @@
-
+<link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
 
 <ion-header class="background">
   <ion-toolbar class="background">
       <table style="width:120%">
           <tr>
-              <td><h4 style="color: #0d0d0d;">JongSnam</h4></td>
+              <td><h4 style="font-family: 'Sriracha', cursive;">JONGSNAM <ion-icon class="one" style="width: 30px;height: 35px;" name="football-outline"></ion-icon></h4></td>
               <td style="font-size:30px;">
                   <ion-icon class="iconhome"  style="margin: 0 20px;" (click)="Gosearch()" name="search-outline"></ion-icon>
-                  <ion-icon  class="iconhome" style="margin: 0 -10px; color: #0d0d0d" (click)="notifications()" name="notifications-outline"></ion-icon>
+                  <ion-icon  class="iconhome" style="margin: 0 -10px; color: #0d0d0d"  (click)="notifications($event)" name="notifications-outline"></ion-icon>
               </td>
           </tr>
       </table>
@@ -29,13 +29,13 @@
                     <div class="product-list-item background">
                         <img src="data:image/png;base64,{{getstore.picture_store}}" [alt]="getstore.name_store"/>
 
-                        <div class="product-list-detail background">
+                        <div class="product-list-detail background" style="font-family: 'Sriracha', cursive;">
                             <div class="product-name background">{{getstore.name_store}}</div>
                             <div class="product-description background">{{getstore.description}}</div>
                             <p-rating [ngModel]="getstore.rating" [readonly]="true" [cancel]="false"></p-rating>
-                            <i class="pi pi-tag product-category-icon background"></i><span class="product-category">{{getstore.category}}</span>
+
                         </div>
-                        <div class="product-list-action">
+                        <div class="product-list-action" style="font-family: 'Sriracha', cursive;">
 <!--                            <span class="product-price">${{getstore.price}}</span>-->
                             <p-button icon="pi pi-shopping-cart" label="ดูรายละเอียด" (onClick)="clickstore(getstore.id_store)" [disabled]="getstore.inventoryStatus === 'OUTOFSTOCK'"></p-button>
 <!--                            <span [class]="'product-badge status-' + getstore.inventoryStatus.toLowerCase()">{{getstore.inventoryStatus}}</span>-->
