--- a/myApp/src/app/tabs/search/search.page.html
+++ b/myApp/src/app/tabs/search/search.page.html
@@ -1,11 +1,11 @@
 <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-<ion-header class="background">
+<ion-header class="background" style="font-family: 'Sriracha', cursive;">
   <ion-toolbar class="background">
     <ion-title>search</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="background">
+<ion-content class="background" style="font-family: 'Sriracha', cursive;">
   <ion-searchbar (ionChange)="searchmethod($event)" showCancelButton="focus" cancelButtonText="ยกเลิก"></ion-searchbar>
     <ion-item class="background">
       <div class="ion-text-wrap" style="margin-left: 200px" >
