--- a/myApp/src/app/home/home.page.html
+++ b/myApp/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-    <ion-tab-bar slot="bottom">
+    <ion-tab-bar slot="bottom" style="font-family: 'Sriracha', cursive;">
         <ion-tab-button tab="myhome">
             <ion-icon name="home"></ion-icon>
             <ion-label>home</ion-label>
