--- a/myApp/src/app/partofpage/editprofile/editprofile.page.html
+++ b/myApp/src/app/partofpage/editprofile/editprofile.page.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
-<ion-header class="background">
+<link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
+<ion-header class="background" style="font-family: 'Sriracha', cursive;">
   <ion-toolbar class="background">
     <ion-buttons>
       <ion-back-button defaultHref="home"></ion-back-button>
@@ -9,7 +10,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngFor="let data of this.dataUser" class="background">
+<ion-content *ngFor="let data of this.dataUser" class="background" style="font-family: 'Sriracha', cursive;">
 
   <div class="ion-padding sizeimage centeredit" style="">
     <img src="assets/img/default-avatar.png" class="rounded" alt="...">
