--- a/myApp/src/app/partofpage/editprofile/editprofile.page.scss
+++ b/myApp/src/app/partofpage/editprofile/editprofile.page.scss
@@ -16,3 +16,9 @@
 .background {
   --background: #f5f5f3;
 }
+.img {
+  width: 125px;
+  height: 125px;
+  border-radius: 50%;
+  border: 8px solid #ffffff;
+}
