--- a/myApp/src/app/partofpage/editstore/editstore.page.html
+++ b/myApp/src/app/partofpage/editstore/editstore.page.html
@@ -1,4 +1,5 @@
-<ion-header class="background">
+<link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
+<ion-header class="background" style="font-family: 'Sriracha', cursive;">
   <ion-toolbar>
     <ion-buttons>
       <ion-back-button defaultHref="home"></ion-back-button>
@@ -7,6 +8,6 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="background">
+<ion-content class="background" style="font-family: 'Sriracha', cursive;">
 
 </ion-content>
