--- a/myApp/src/app/partofpage/search-advanced/search-advanced.page.html
+++ b/myApp/src/app/partofpage/search-advanced/search-advanced.page.html
@@ -1,4 +1,5 @@
-<ion-header class="background">
+<link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
+<ion-header class="background" style="font-family: 'Sriracha', cursive;">
   <ion-toolbar class="background">
         <ion-buttons>
           <ion-back-button defaultHref="home"></ion-back-button>
@@ -13,7 +14,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="background">
+<ion-content class="background" style="font-family: 'Sriracha', cursive;">
 
 
   <ion-range dualKnobs="true" [min]=timeMin [max]=timeMax step="3"
