--- a/myApp/src/app/tabs/account/account.page.html
+++ b/myApp/src/app/tabs/account/account.page.html
@@ -1,74 +1,29 @@
-
-
-<ion-header class="background">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
+<ion-header class="background" >
   <ion-toolbar class="background">
-    <ion-title>account</ion-title>
+    <ion-title style="font-family: 'Sriracha', cursive;">ข้อมูลส่วนตัว</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="background">
-  <div class="container" *ngFor="let data of dataAccount">
-    <div class="r">
-      <div class="col-md-3">
-        <div class="">
-          <div class="">
-            <img src="assets/img/default-avatar.png">
-          </div>
-          <div>
-            <div>
-              ชื่อ :{{data.firstname_member}} {{data.lasname_member}}
-            </div>
-            <div>
-              ที่อยู่ :{{data.address_member}}
-            </div>
-          </div>
-          <br>
-          <div class="underline">
-              <li class="active">
-                <a>
-                  <ion-icon name="home-outline"></ion-icon>
-                  Overview </a>
-              </li>
 
-              <li  (click)="goTosettingprofile()" >
-                <a>
-                  <ion-icon name="settings-outline"></ion-icon>
-                    Account Settings </a>
-              </li>
-
-              <li *ngIf=" data.status_member == '2'" (click)="goTomanageStore()">
-                <a>
-                  <ion-icon name="business-outline"></ion-icon>
-                  Manage Store </a>
-              </li>
-
-              <li>
-                <a>
-                  <ion-icon name="chatbubbles-outline"></ion-icon>
-                  Help </a>
-              </li>
-
-          </div>
-          <br>
-          <div>
-            <ion-button  (click)="presentAlertConfirm()" color="danger"  style="height: 40px">Logout</ion-button>
-          </div>
-
-        </div>
-      </div>
-
-      <div class="col-md-9">
-        <div class="profile-content">
-          Some user related content goes here...
-        </div>
-      </div>
-
-    </div>
+<ion-content *ngFor="let data of dataAccount" style="font-family: 'Sriracha', cursive;">
+  <div id="header">
+    <img src="assets/img/default-avatar.png" />
   </div>
-  <br>
-  <br>
+
+  <!--    <ion-item >-->
+  <!--      <img style="text-align: center" src="assets/img/jongsanam-logo.png">-->
+  <!--    </ion-item>-->
+  <div class="form123">
+    <div id="list-example" class="list-group">
+      <a class="list-group-item list-group-item-action" (click)="goTosettingprofile()" ><ion-icon name="create-outline"></ion-icon> แก้ไขข้อมูลส่วนตัว</a>
+      <a  *ngIf=" data.status_member == '2'"  class="list-group-item list-group-item-action" (click)="goTomanageStore()"><ion-icon name="file-tray-full-outline"></ion-icon> จัดการข้อมูลร้าน</a>
+      <a class="list-group-item list-group-item-action"  ><ion-icon name="list-outline"></ion-icon> จัดการข้อมูลการจองสนาม</a>
+      <ion-button  (click)="presentAlertConfirm()" color="danger"  style="height: 40px">Logout</ion-button>
+    </div>
+
+  </div>
 
 </ion-content>
-
-
 
