--- a/myApp/src/app/partofpage/editfield/editfield.page.scss
+++ b/myApp/src/app/partofpage/editfield/editfield.page.scss
@@ -1,3 +1,21 @@
 .background {
   --background: #f5f5f3;
 }
+.sizeimage{
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+.centeredit {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+.centerbutton{
+  display: flex;
+  justify-content: center;
+}
+.background {
+  --background: #f5f5f3;
+}
